# ic-siwe-react-demo-rust

./: Cargo.toml  dfx.json  generate.sh  index.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs  test.rs  testing.rs
src/frontend/src/: main.tsx  vite-env.d.ts
src/frontend/src/components/profile/: AllProfiles.tsx
src/frontend/src/ic/: Actors.tsx
