[package]
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-xrc-types = { workspace = true }
candid = "0.10.10"
ic-cdk = "0.16.0"
serde = "1.0.208"
serde_json = "1.0.125"
ic-stable-structures = "0.6.5"
serde_bytes = "0.11.15"
ic-cdk-timers = "0.7"
candid-extractor = "0.1.2"
base64 = "0.13.0"
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
ic-cdk-macros = "0.8.4"
sha2 = "0.9.8"
icrc-ledger-types = "0.1.5"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2"


[build-dependencies]
ic-cdk-bindgen = "0.1.3"
dotenv = "0.15.0"
